# g10_camembert_project

./: Optuna_dashboard.md  README.md  dashboard.py  plotly-cloud.toml  pyproject.toml
assets/: custom_dashboard.css  index.html
configs/: config.py
g10_camembert/: .gitignore  README.md  g10-projet-mloptimisation-enrichi.ipynb  pyproject.toml  rapport_g10_p02.tex  run_baseline.py  run_grid_search.py  run_optuna.py
g10_camembert/configs/: config.py  config.yaml
g10_camembert/notebooks/: g10-projet-mloptimisation-enrichi.ipynb
g10_camembert/results/: baseline_results.json  best_params (1).json  grid_p02_results.csv  summary.csv
g10_camembert/scripts/: run_baseline.sh  run_full_pipeline.sh  run_grid_search.sh  run_optuna.sh
g10_camembert/src/g10_camembert/: __init__.py  dataset.py  grid_search.py  loader.py  loss_landscape.py  optuna_search.py  plots.py  trainer.py
g10_camembert/src/g10_camembert/analysis/: __init__.py  loss_landscape.py
g10_camembert/src/g10_camembert/models/: __init__.py
g10_camembert/src/g10_camembert/optimization/: __init__.py  grid_search.py  optuna_search.py
g10_camembert/src/g10_camembert/training/: __init__.py  trainer.py
g10_camembert/src/g10_camembert/utils/: __init__.py  config.py  metrics.py  seed.py
g10_camembert/src/g10_camembert/visualization/: __init__.py  plots.py
g10_camembert/tests/: __init__.py  test_dataset.py  test_metrics.py  test_trainer.py
results/: grid_p02_results.csv  optuna_final.db  sharpness_results.json
scripts/: run_baseline.py  run_landscape.py  run_pipeline.py
src/g10_camembert/: camembert.py  optuna_search.py  trainer.py
