[tool.poetry]
name = "g10-camembert"
version = "1.0.0"
description = "Fine-tuning CamemBERT sur Allociné — Protocole P02 : Régularisation & Généralisation"
authors = ["Groupe G10 <g10@university.fr>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "g10_camembert", from = "src" }]
keywords = ["nlp", "transformers", "camembert", "sentiment-analysis", "hyperparameter-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python         = "^3.10"
torch          = "^2.1.0"
transformers   = "^4.38.0"
datasets       = "^2.18.0"
optuna         = "^3.6.0"
scikit-learn   = "^1.4.0"
numpy          = "^1.26.0"
pandas         = "^2.2.0"
matplotlib     = "^3.8.0"
seaborn        = "^0.13.0"
sentencepiece  = "^0.2.0"
evaluate       = "^0.4.0"
accelerate     = "^0.28.0"
pydantic       = "^2.6.0"
pydantic-settings = "^2.2.0"
rich           = "^13.7.0"
loguru         = "^0.7.0"
typer          = "^0.12.0"
omegaconf      = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest         = "^8.1.0"
pytest-cov     = "^5.0.0"
black          = "^24.3.0"
ruff           = "^0.3.0"
mypy           = "^1.9.0"
pre-commit     = "^3.7.0"
ipykernel      = "^6.29.0"
nbconvert      = "^7.16.0"

[tool.poetry.group.viz.dependencies]
plotly         = "^5.20.0"
kaleido        = "^0.2.1"

[tool.poetry.scripts]
g10-train      = "g10_camembert.training.trainer:main"
g10-optimize   = "g10_camembert.optimization.optuna_search:main"
g10-evaluate   = "g10_camembert.training.evaluator:main"
g10-landscape  = "g10_camembert.analysis.loss_landscape:main"
g10-report     = "g10_camembert.visualization.report:main"

[tool.black]
line-length    = 100
target-version = ["py310"]
include        = '\.pyi?$'

[tool.ruff]
line-length    = 100
select         = ["E", "F", "I", "N", "UP", "ANN"]
ignore         = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --cov=src/g10_camembert --cov-report=term-missing"

[build-system]
requires       = ["poetry-core>=1.8.0"]
build-backend  = "poetry.core.masonry.api"
